fixed broken images, misc changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div class='mainFlex'>
-            <div class='titleBar'></div>
+            <div class='titleBar'>
+                <img src='static/Golden_Chest.png' class='icon'></img>
+                <div class='titleText'>Rainstash</div>
+            </div>
             <div class='contentContainer'>
                 <div class='infoPanel'>
                     <div class='infoTitle'></div>
