--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <body>
         <div class='mainFlex'>
             <div class='titleBar'>
-                <img src='static/Golden_Chest.png' class='icon'></img>
-                <div class='titleText'>Rainstash</div>
+                <div class='titleWrap'>
+                    <img src='static/Golden_Chest.png' class='icon'></img>
+                    <div class='titleText'>Rainstash</div>
+                </div>
+                <input type="text" class='search' placeholder="Search...">
             </div>
             <div class='contentContainer'>
                 <div class='infoPanel'>
