start of usage mp4s

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <link rel='stylesheet' href='styles/scroll.css'/>
         <link rel='stylesheet' href='styles/style.css'/>
+        <link rel="icon" href="static/favicon.ico" type="image/x-icon"/>
         <script type='text/javascript' src='src/itemManifest.js'></script>
         <script type='text/javascript' src='src/index.js'></script>
-        <title>Rainstash</title>
+        <title>RAINSTASH</title>
     </head>
     <body>
         <div class='mainFlex'>
@@ -28,6 +29,7 @@
                     <div class='infoStack'></div>
                     <p id='infoUnlockTitle' class='gray'>Unlock:</p>
                     <div class='infoUnlock'></div>
+                    <video id='video' class='infoVideo' autoplay loop></video>
                 </div>
                 <div class='itemPanel'>
                     <div class='category white'></div>
