--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                 <input type='text' class='search' id='search' placeholder='Search...'>
             </div>
             <div class='contentContainer'>
-                <div class='infoPanel'>
-                    <div class='infoTitle'></div>
+                <div class='infoPanel fadeOut'>
+                    <div class='infoname'></div>
                     <img class='infoImage'></img>
                     <div class='subInfoPanel'>
                         <p class='gray'>Description:</p>
-                        <div class='infoDesc'></div>
-                        <p id='infoCooldownTitle' class='gray'>Cooldown:</p>
-                        <div class='infoCooldown'></div>
-                        <p id='infoStackTitle' class='gray'>Stacking effect:</p>
-                        <div class='infoStack'></div>
-                        <p id='infoUnlockTitle' class='gray'>Unlock:</p>
-                        <div class='infoUnlock'></div>
+                        <div class='infodescription'></div>
+                        <p id='cooldownTitle' class='gray'>Cooldown:</p>
+                        <div class='infocooldown'></div>
+                        <p id='stackTitle' class='gray'>Stacking effect:</p>
+                        <div class='infostack infoembryo'></div>
+                        <p id='unlockTitle' class='gray'>Unlock:</p>
+                        <div class='infounlock'></div>
                         <video id='video' class='infoVideo' autoplay loop></video>
                     </div>
                 </div>
