--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script type='text/javascript' src='src/itemManifest.js'></script>
         <script type='text/javascript' src='src/index.js'></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92171950-2"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-92171950-2');
+        </script>
+
     </head>
     <body>
         <div class='mainFlex'>
