--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <meta name='description' content='A convenient list of all the items and their effects from the game Risk of Rain.'/>
         <meta name='keywords' content='Risk of Rain, items, item, wiki, risk, of, rain, guide, risk of rain items'/>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta charset="utf-8"/>
         <script type='text/javascript' src='src/itemManifest.js'></script>
         <script type='text/javascript' src='src/index.js'></script>
     </head>
