sort by command, closes #2

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
                         </label>
                     </div>
 
+                    <label class='gray smallText'>Sort by:</label>
+                    <div class='toggleWrap'>
+                        <input type='checkbox' class='check' id='toggleSort'/>
+                        <label class='toggle toggleSort' for='toggleSort'>
+                            <span class='toggleHandle'></span>
+                        </label>
+                    </div>
+
                 </div>
                 <p class='gray'>At the time of writing, not all items have videos. I'll finish them all eventually, promise!</p>
                 <div class='dividerLine'></div>
