'Dropped by' label, resolves #4

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <label id='cooldownTitle' class='gray'>Cooldown:</label>
                         <div class='infocooldown'></div>
                         <label id='unlockTitle' class='gray'>Unlock:</label>
-                        <div class='infounlock'></div>
+                        <div class='infounlock infodrop'></div>
                         <video id='video' class='infoVideo' autoplay loop></video>
                     </div>
                 </div>
