artifacts & misc, fixes #5, closes #6

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92171950-2"></script>
         <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-92171950-2');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-92171950-2');
         </script>
 
         <link rel='stylesheet' href='styles/scroll.css'/>
@@ -19,6 +19,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta charset="utf-8"/>
         <script type='text/javascript' src='src/itemManifest.js'></script>
+        <script type='text/javascript' src='src/mobile.js'></script>
         <script type='text/javascript' src='src/cookie.js'></script>
         <script type='text/javascript' src='src/index.js'></script>
     </head>
@@ -59,6 +60,7 @@
                     <div class='category yellow'></div>
                     <div class='category orange'></div>
                     <div class='category purple'></div>
+                    <div class='category misc'></div>
                 </div>
             </div>
         </div>
