performance mode, manifest loading changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <meta name='keywords' content='Risk of Rain, items, item, wiki, risk, of, rain, guide, risk of rain items'/>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta charset="utf-8"/>
-        <script type='text/javascript' src='src/itemManifest.js'></script>
         <script type='text/javascript' src='src/mobile.js'></script>
         <script type='text/javascript' src='src/cookie.js'></script>
         <script type='text/javascript' src='src/index.js'></script>
@@ -69,14 +68,6 @@
                 <img id='closeOptions' class='closeButton' src='static/close3.png'/>
                 <div class='switchWrap'>
 
-                    <label class='gray smallText'>load preview videos:</label>
-                    <div class='toggleWrap'>
-                        <input type='checkbox' class='check' id='loadVids'/>
-                        <label class='toggle toggleBool' for='loadVids'>
-                            <span class='toggleHandle'></span>
-                        </label>
-                    </div>
-
                     <label class='gray smallText'>Sort by:</label>
                     <div class='toggleWrap'>
                         <input type='checkbox' class='check' id='toggleSort'/>
@@ -85,6 +76,22 @@
                         </label>
                     </div>
 
+                    <label class='gray smallText'>load preview videos:</label>
+                    <div class='toggleWrap'>
+                        <input type='checkbox' class='check' id='loadVids'/>
+                        <label class='toggle toggleBool' for='loadVids'>
+                            <span class='toggleHandle'></span>
+                        </label>
+                    </div>
+
+                    <label class='gray smallText'>performance mode:</label>
+                    <div class='toggleWrap'>
+                        <input type='checkbox' class='check' id='togglePerformance'/>
+                        <label class='toggle toggleBool' for='togglePerformance'>
+                            <span class='toggleHandle'></span>
+                        </label>
+                    </div>
+                    
                 </div>
                 <p class='gray'>At the time of writing, not all items have videos. I'll finish them all eventually, promise!</p>
                 <div class='dividerLine'></div>
