resolved link problems, misc manifest changes. fixes #11

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                 
                 </div>
-                <div onclick='openInTab("https://github.com/Fustran/rainstash")' class='titleText red link'>rainstash repository</div>
+                <a onclick='return openInTab("https://github.com/Fustran/rainstash")' href='https://github.com/Fustran/rainstash' class='titleText red link'>rainstash repository</a>
                 <div class='dividerLine'></div>
                 <p class='gray'>
                     Found a bug? <br> I'd really appreciate a 
