--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src='./main.js'></script>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
@@ -11,10 +12,10 @@
         <img src='./static/golemDance.gif'>
         <div>
             you can find us at 
-            <a target='_blank' rel='noreferrer noopener' href='https://rainstash.com'>rainstash.com</a>!
+            <a href='https://rainstash.com'>rainstash.com</a>!
             <div class='subtitle'>(Make sure to update your bookmarks...)</div>
             <div class='spacer'></div>
-            <div class='subtitle'>
+            <div>
                 Redirecting you in <div id='counter'>5</div> Seconds...
             </div>
         </div>
