opengraph embed data

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
       name="description"
       content="A convenient list of all the items and their effects from Risk of Rain 1 and 2!"
     />
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="RAINSTASH" />
+    <meta property="og:description" content="A convenient list of all the items and their effects from Risk of Rain 1 and 2!" />
+    <meta property="og:url" content="https://rainstash.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>RAINSTASH</title>
